[package]
name = "unirecover-carving"
version = "0.1.0"
edition = "2021"

[dependencies]
unirecover-core = { path = "../unirecover-core" }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "simd_benchmark"
harness = false
