[package]
name = "unirecover-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
unirecover-core = { path = "../unirecover-core" }
aes = "0.8"
aes-kw = "0.2"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
xts-mode = "0.5"
cipher = "0.4"
