[package]
name = "unirecover-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "unirecover_backend"
crate-type = ["cdylib", "rlib"]

[dependencies]
unirecover-core = { path = "../unirecover-core" }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
