[package]
name = "unirecover-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
unirecover-core = { path = "../unirecover-core" }
unirecover-audit = { path = "../unirecover-audit" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
