[package]
name = "unirecover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
unirecover-core = { path = "../unirecover-core" }
actix-web = "4.4"
actix-web-actors = "4.2"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
